--- a/README
+++ b/README
@@ -16,9 +16,9 @@ INSTALLATION
   3. Run "make install" (you may need root permissions)
 
   4. Additionally, if you're running 3.8, you'll need to add
-     "RT::Extension::SideBySide-CustomView" to @Plugins in
+     "RT::Extension::SideBySideView::CustomView" to @Plugins in
      etc/RT_SiteConfig.pm.  For example:
-     Set(@Plugins, qw(RT::Extension::SideBySide-CustomView RT::FM));
+     Set(@Plugins, qw(RT::Extension::SideBySideView::CustomView RT::FM));
 
   6. Clear RT's mason cache and restart the web server to make sure the
      extension is incorporated.
