--- a/README
+++ b/README
@@ -2,9 +2,9 @@ NAME
   RT::Extension::SideBySideView
 
 DESCRIPTION
-  Based on an original Idea from Markus Dirr (GreenCircle) and the ground
-  work of Thomas Sibley (BestPractical) and some Ideas from BPS Wiki
-  this AddOn will give you the option to change the Ticket View from original
+  Based on an original Idea from Steve Turner (MIT) and Markus Dirr (GreenCircle) 
+  and the ground work of Thomas Sibley (BestPractical) and some Ideas from BPS 
+  Wiki this AddOn will give you the option to change the Ticket View from original
   BPS View to a so called SideBySide Ticket View (known from wiki).
 
 
@@ -30,5 +30,6 @@ AUTHOR
   Torsten Brumm <tbrumm@mac.com>
 
 THANKS
-  Markus Dirr
-  Thomas Sibley
+  Steve Turner (MIT)
+  Markus Dirr (GC)
+  Thomas Sibley (BPS)
