Added Christian as Co Author

--- a/README
+++ b/README
@@ -28,8 +28,10 @@ LICENSE
 
 AUTHOR
   Torsten Brumm <tbrumm@mac.com>
+  Christian Loos
 
 THANKS
   Steve Turner (MIT)
   Markus Dirr (GC)
   Thomas Sibley (BPS)
+  Christian Loos (NetCologne)
