--- a/README
+++ b/README
@@ -1,37 +1,39 @@
 NAME
-  RT::Extension::SideBySideView
+    RT::Extension::SideBySideView
 
-DESCRIPTION
-  Based on an original Idea from Steve Turner (MIT) and Markus Dirr (GreenCircle) 
-  and the ground work of Thomas Sibley (BestPractical) and some Ideas from BPS 
-  Wiki this AddOn will give you the option to change the Ticket View from original
-  BPS View to a so called SideBySide Ticket View (known from wiki).
-
+SYNOPSIS
+    Based on an original Idea from Steve Turner (MIT) and Markus Dirr
+    (GreenCircle) and the ground work of Thomas Sibley (BestPractical) and
+    some Ideas from BPS Wiki this AddOn will give you the option to change
+    the Ticket View from original BPS View to a so called SideBySide Ticket
+    View (known from wiki).
 
 INSTALLATION
-  1. Run "perl Makefile.PL"
+            1. Run "perl Makefile.PL"
 
-  2. Run "make"
+            2. Run "make"
 
-  3. Run "make install" (you may need root permissions)
+            3. Run "make install" (you may need root permissions)
 
-  4. Additionally, if you're running 3.8, you'll need to add
-     "RT::Extension::SideBySideView::CustomView" to @Plugins in
-     etc/RT_SiteConfig.pm.  For example:
-     Set(@Plugins, qw(RT::Extension::SideBySideView::CustomView RT::FM));
+            4. Additionally, if you're running 3.8, you'll need to add
+            "RT::Extension::SideBySideView::CustomView" to @Plugins in
+            etc/RT_SiteConfig.pm.  For example:
+            Set( @Plugins, qw(RT::Extension::SideBySideView::CustomView) );
 
-  6. Clear RT's mason cache and restart the web server to make sure the
-     extension is incorporated.
-   
-LICENSE
-  Under the same terms as perl itself.
+            6. Clear RT's mason cache and restart the web server to make sure the
+            extension is incorporated.
 
 AUTHOR
-  Torsten Brumm <tbrumm@mac.com>
-  Christian Loos
+            Torsten Brumm <tbrumm@mac.com>
+            Christian Loos <cloos@netsandbox.de>
+
+LICENCE
+    This library is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
 THANKS
-  Steve Turner (MIT)
-  Markus Dirr (GC)
-  Thomas Sibley (BPS)
-  Christian Loos (NetCologne)
+            Steve Turner (MIT)
+            Markus Dirr (GC)
+            Thomas Sibley (BPS)
+            Christian Loos (NetCologne)
+
