--- a/README
+++ b/README
@@ -33,7 +33,7 @@ INSTALLATION
             extension is incorporated.
 
 AUTHOR
-            Torsten Brumm <tbrumm@mac.com>
+            Torsten Brumm, http://technik.picturepunxx.de/ <tbrumm@mac.com>
             Christian Loos <cloos@netsandbox.de>
 
 LICENCE
