add an upgrading note

--- a/README
+++ b/README
@@ -30,6 +30,12 @@ INSTALLATION
 
     Restart your webserver
 
+UPGRADING
+    If you are upgrading from 0.03 or earlier, you must remove the old
+    version of this extension before installing the new version by running:
+
+        rm -rf /opt/rt4/local/plugins/RT-Extension-SideBySideView/
+
 AUTHORS
     Torsten Brumm http://technik.picturepunxx.de/ <tbrumm@mac.com>
 
