--- a/README
+++ b/README
@@ -40,7 +40,7 @@ UPGRADING
         rm -rf /opt/rt4/local/plugins/RT-Extension-SideBySideView/
 
 AUTHORS
-    Torsten Brumm http://technik.picturepunxx.de/ <tbrumm@mac.com>
+    Torsten Brumm http://technik.picturepunxx.de/ <technik@picturepunxx.de>
 
     Christian Loos <cloos@netsandbox.de>
 
