--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for RT::Extension::SideBySideView
 
+1.01 2016-08-15
+ - update Module::Install and friends
+ - update for RT 4.4 compatibility
+ - bump Perl version to 5.10.1
+
 1.00 2015-02-06
  - update Module::Install and friends
  - move config option to 'Ticket display' section
